# qgis-auth-test-browser

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  scripts
auth-test-browser/: CMakeLists.txt  auth-test-browser-64.bat  browser.cpp  browser.h  config.h.in  images  main.cpp  testwidget.h
tests/: CMakeLists.txt  testauthbrowser.cpp  testutils.h
